--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -24,7 +24,6 @@
             overflow-x: hidden;
         }
 
-        /* Animated background particles */
         .bg-particles {
             position: fixed;
             top: 0;
@@ -72,7 +71,7 @@
             transform: translateX(-50%);
             width: 100px;
             height: 4px;
-            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
+            background: linear-gradient(90deg, #007bff, #00d4ff);
             border-radius: 2px;
         }
 
@@ -197,60 +196,6 @@
             background: linear-gradient(90deg, transparent, rgba(94, 234, 212, 0.3), transparent);
         }
 
-        .form-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 25px;
-            margin-bottom: 25px;
-        }
-
-        .form-group {
-            margin-bottom: 25px;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 12px;
-            font-weight: 600;
-            color: #cbd5e1;
-            font-size: 0.95rem;
-            letter-spacing: 0.5px;
-        }
-
-        .form-group input,
-        .form-group select,
-        .form-group textarea {
-            width: 100%;
-            padding: 16px 20px;
-            border: 2px solid rgba(148, 163, 184, 0.2);
-            border-radius: 15px;
-            font-size: 1rem;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            background: rgba(15, 23, 42, 0.6);
-            color: #e2e8f0;
-            backdrop-filter: blur(10px);
-        }
-
-        .form-group input::placeholder,
-        .form-group textarea::placeholder {
-            color: #64748b;
-        }
-
-        .form-group input:focus,
-        .form-group select:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: #06b6d4;
-            background: rgba(15, 23, 42, 0.8);
-            box-shadow: 0 0 0 4px rgba(6, 182, 212, 0.1);
-            transform: translateY(-2px);
-        }
-
-        .form-group textarea {
-            resize: vertical;
-            min-height: 140px;
-        }
-
         .btn {
             background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
             color: #f0fdfa;
@@ -292,39 +237,6 @@
             transform: translateY(-1px);
         }
 
-        .btn-danger {
-            background: linear-gradient(135deg, #dc2626 0%, #991b1b 100%);
-            box-shadow: 0 8px 25px rgba(220, 38, 38, 0.3);
-        }
-
-        .btn-danger:hover {
-            box-shadow: 0 15px 40px rgba(220, 38, 38, 0.4);
-        }
-
-        .btn-secondary {
-            background: linear-gradient(135deg, #475569 0%, #334155 100%);
-            box-shadow: 0 8px 25px rgba(71, 85, 105, 0.3);
-        }
-
-        .btn-secondary:hover {
-            box-shadow: 0 15px 40px rgba(71, 85, 105, 0.4);
-        }
-
-        .btn-success {
-            background: linear-gradient(135deg, #059669 0%, #047857 100%);
-            box-shadow: 0 8px 25px rgba(5, 150, 105, 0.3);
-        }
-
-        .btn-success:hover {
-            box-shadow: 0 15px 40px rgba(5, 150, 105, 0.4);
-        }
-
-        .btn-small {
-            padding: 12px 24px;
-            font-size: 0.9rem;
-            margin: 0 8px;
-        }
-
         .job-listings {
             display: grid;
             gap: 25px;
@@ -357,7 +269,6 @@
             border-color: rgba(94, 234, 212, 0.3);
             background: rgba(15, 23, 42, 0.8);
         }
-
         .job-title {
             font-size: 1.8rem;
             font-weight: 800;
@@ -443,8 +354,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: rgba(15, 23, 42, 0.95);
-            border: 1px solid rgba(148, 163, 184, 0.2);
+            background: rgba(26, 26, 46, 0.95);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 25px;
             padding: 40px;
             max-width: 550px;
@@ -463,76 +374,45 @@
             border: none;
             font-size: 28px;
             cursor: pointer;
-            color: #64748b;
+            color: #8892b0;
             transition: color 0.3s ease;
         }
 
         .close-btn:hover {
-            color: #e2e8f0;
+            color: #ffffff;
         }
 
         .file-upload {
-            border: 2px dashed rgba(6, 182, 212, 0.3);
+            border: 2px dashed rgba(0, 123, 255, 0.3);
             border-radius: 15px;
             padding: 30px;
             text-align: center;
             cursor: pointer;
             transition: all 0.3s ease;
-            background: rgba(6, 182, 212, 0.02);
+            background: rgba(0, 123, 255, 0.02);
         }
 
         .file-upload:hover {
-            background: rgba(6, 182, 212, 0.05);
-            border-color: rgba(6, 182, 212, 0.5);
+            background: rgba(0, 123, 255, 0.05);
+            border-color: rgba(0, 123, 255, 0.5);
         }
 
-        .success-message, .error-message {
+        .success-message {
             padding: 18px 25px;
             border-radius: 15px;
             margin-bottom: 25px;
             display: none;
             font-weight: 600;
-            border-left: 4px solid;
-        }
-
-        .success-message {
-            background: rgba(5, 150, 105, 0.1);
-            border-color: #059669;
-            color: #6ee7b7;
-        }
-
-        .error-message {
-            background: rgba(220, 38, 38, 0.1);
-            border-color: #dc2626;
-            color: #fca5a5;
-        }
-
-        .storage-actions {
-            margin-bottom: 30px;
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-
-        .json-viewer {
-            background: rgba(0, 0, 0, 0.4);
-            border: 1px solid rgba(148, 163, 184, 0.2);
-            border-radius: 15px;
-            padding: 25px;
-            max-height: 500px;
-            overflow-y: auto;
-            font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
-            font-size: 0.9rem;
-            white-space: pre-wrap;
-            color: #94a3b8;
-            line-height: 1.6;
+            background: rgba(40, 167, 69, 0.1);
+            border-left: 4px solid #28a745;
+            color: #4ade80;
         }
 
         .section-title {
             font-size: 2.2rem;
             font-weight: 800;
             margin-bottom: 30px;
-            color: #f0fdfa;
+            color: #ffffff;
             text-align: center;
             position: relative;
             padding-bottom: 20px;
@@ -546,93 +426,55 @@
             transform: translateX(-50%);
             width: 80px;
             height: 3px;
-            background: linear-gradient(90deg, #06b6d4, #5eead4);
+            background: linear-gradient(90deg, #007bff, #00d4ff);
             border-radius: 2px;
         }
 
-        /* Admin toggle styles */
-        .admin-toggle {
-            display: inline-flex;
-            align-items: center;
-            gap: 15px;
-            background: rgba(15, 23, 42, 0.7);
-            padding: 15px 25px;
-            border-radius: 50px;
-            border: 1px solid rgba(148, 163, 184, 0.2);
-            margin-bottom: 30px;
+        .form-group {
+            margin-bottom: 25px;
         }
 
-        .toggle-switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
-        }
-
-        .toggle-switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-
-        .toggle-slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #475569;
-            transition: .4s;
-            border-radius: 34px;
-        }
-
-        .toggle-slider:before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            bottom: 4px;
-            background-color: #f0fdfa;
-            transition: .4s;
-            border-radius: 50%;
-        }
-
-        input:checked + .toggle-slider {
-            background-color: #0891b2;
-        }
-
-        input:checked + .toggle-slider:before {
-            transform: translateX(26px);
-        }
-
-        .admin-indicator {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(220, 38, 38, 0.9);
-            color: #fecaca;
-            padding: 8px 16px;
-            border-radius: 20px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            z-index: 1000;
-            display: none;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(220, 38, 38, 0.3);
-        }
-
-        .admin-indicator.active {
+        .form-group label {
             display: block;
+            margin-bottom: 12px;
+            font-weight: 600;
+            color: #e2e8f0;
+            font-size: 0.95rem;
+            letter-spacing: 0.5px;
         }
 
-        /* Hide admin elements by default */
-        .admin-only {
-            display: none;
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 16px 20px;
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            font-size: 1rem;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background: rgba(255, 255, 255, 0.05);
+            color: #ffffff;
+            backdrop-filter: blur(10px);
         }
 
-        /* Responsive Design */
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            color: #64748b;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #007bff;
+            background: rgba(0, 123, 255, 0.05);
+            box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.1);
+            transform: translateY(-2px);
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 140px;
+        }
+
         @media (max-width: 768px) {
             .header h1 {
                 font-size: 2.5rem;
@@ -647,16 +489,8 @@
                 flex-direction: column;
             }
             
-            .form-grid {
-                grid-template-columns: 1fr;
-            }
-
             .job-actions {
                 justify-content: center;
-            }
-
-            .storage-actions {
-                flex-direction: column;
             }
 
             .card {
@@ -683,37 +517,21 @@
             }
         }
 
-        /* Loading animation */
-        .loading {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 3px solid rgba(148, 163, 184, 0.3);
-            border-radius: 50%;
-            border-top-color: #06b6d4;
-            animation: spin 1s ease-in-out infinite;
-        }
-
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-
-        /* Scrollbar styling */
         ::-webkit-scrollbar {
             width: 8px;
         }
 
         ::-webkit-scrollbar-track {
-            background: rgba(15, 23, 42, 0.5);
+            background: rgba(255, 255, 255, 0.05);
         }
 
         ::-webkit-scrollbar-thumb {
-            background: rgba(6, 182, 212, 0.3);
+            background: rgba(0, 123, 255, 0.3);
             border-radius: 4px;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: rgba(6, 182, 212, 0.5);
+            background: rgba(0, 123, 255, 0.5);
         }
     </style>
 </head>
