--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -20,7 +20,7 @@
             line-height: 1.6;
             background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 40%, #16213e 70%, #0f1419 100%);
             min-height: 100vh;
-            color: #e2e8f0;
+            color: #ffffff;
             overflow-x: hidden;
         }
 
@@ -38,14 +38,14 @@
             position: absolute;
             width: 2px;
             height: 2px;
-            background: rgba(59, 130, 246, 0.3);
+            background: rgba(0, 123, 255, 0.3);
             border-radius: 50%;
             animation: float 6s ease-in-out infinite;
         }
 
         @keyframes float {
-            0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.2; }
-            50% { transform: translateY(-20px) rotate(180deg); opacity: 0.8; }
+            0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.3; }
+            50% { transform: translateY(-20px) rotate(180deg); opacity: 1; }
         }
 
         .container {
@@ -78,7 +78,7 @@
         .header h1 {
             font-size: 3.5rem;
             margin-bottom: 15px;
-            background: linear-gradient(135deg, #3b82f6 0%, #8b5cf6 50%, #ffffff 100%);
+            background: linear-gradient(135deg, #007bff 0%, #00d4ff 50%, #ffffff 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -88,7 +88,7 @@
 
         .header .subtitle {
             font-size: 1.3rem;
-            color: #94a3b8;
+            color: #8892b0;
             margin-bottom: 10px;
             font-weight: 500;
         }
@@ -111,9 +111,9 @@
 
         .tab-btn {
             padding: 18px 35px;
-            background: rgba(15, 23, 42, 0.8);
-            color: #e2e8f0;
-            border: 2px solid rgba(59, 130, 246, 0.2);
+            background: rgba(0, 123, 255, 0.1);
+            color: #ffffff;
+            border: 2px solid rgba(0, 123, 255, 0.3);
             border-radius: 50px;
             cursor: pointer;
             font-size: 1rem;
@@ -131,7 +131,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(59, 130, 246, 0.1), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
             transition: left 0.5s;
         }
 
@@ -140,17 +140,17 @@
         }
 
         .tab-btn:hover {
-            background: rgba(15, 23, 42, 0.9);
-            border-color: rgba(59, 130, 246, 0.4);
+            background: rgba(0, 123, 255, 0.2);
+            border-color: rgba(0, 123, 255, 0.6);
             transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(59, 130, 246, 0.2);
+            box-shadow: 0 10px 30px rgba(0, 123, 255, 0.3);
         }
 
         .tab-btn.active {
-            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%);
-            border-color: #3b82f6;
-            color: #f8fafc;
-            box-shadow: 0 15px 35px rgba(59, 130, 246, 0.3);
+            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            border-color: #007bff;
+            color: #ffffff;
+            box-shadow: 0 15px 35px rgba(0, 123, 255, 0.4);
             transform: translateY(-2px);
         }
 
@@ -175,13 +175,13 @@
         }
 
         .card {
-            background: rgba(15, 23, 42, 0.7);
-            border: 1px solid rgba(148, 163, 184, 0.1);
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             border-radius: 25px;
             padding: 40px;
             margin-bottom: 30px;
             backdrop-filter: blur(20px);
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -193,12 +193,12 @@
             left: 0;
             right: 0;
             height: 1px;
-            background: linear-gradient(90deg, transparent, rgba(94, 234, 212, 0.3), transparent);
+            background: linear-gradient(90deg, transparent, rgba(0, 123, 255, 0.5), transparent);
         }
 
         .btn {
-            background: linear-gradient(135deg, #0891b2 0%, #0e7490 100%);
-            color: #f0fdfa;
+            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
+            color: white;
             border: none;
             padding: 18px 40px;
             border-radius: 50px;
@@ -206,7 +206,7 @@
             font-weight: 700;
             cursor: pointer;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 8px 25px rgba(6, 182, 212, 0.3);
+            box-shadow: 0 8px 25px rgba(0, 123, 255, 0.3);
             position: relative;
             overflow: hidden;
             letter-spacing: 0.5px;
@@ -220,7 +220,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(240, 253, 250, 0.2), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
             transition: left 0.5s;
         }
 
@@ -230,7 +230,7 @@
 
         .btn:hover {
             transform: translateY(-3px);
-            box-shadow: 0 15px 40px rgba(6, 182, 212, 0.4);
+            box-shadow: 0 15px 40px rgba(0, 123, 255, 0.4);
         }
 
         .btn:active {
@@ -243,8 +243,8 @@
         }
 
         .job-card {
-            background: rgba(15, 23, 42, 0.5);
-            border: 1px solid rgba(148, 163, 184, 0.15);
+            background: rgba(255, 255, 255, 0.02);
+            border: 1px solid rgba(255, 255, 255, 0.08);
             border-radius: 20px;
             padding: 35px;
             transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
@@ -260,26 +260,27 @@
             left: 0;
             width: 100%;
             height: 3px;
-            background: linear-gradient(90deg, #06b6d4, #5eead4);
+            background: linear-gradient(90deg, #007bff, #00d4ff);
         }
 
         .job-card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 30px 60px rgba(6, 182, 212, 0.15);
-            border-color: rgba(94, 234, 212, 0.3);
-            background: rgba(15, 23, 42, 0.8);
+            box-shadow: 0 30px 60px rgba(0, 123, 255, 0.15);
+            border-color: rgba(0, 123, 255, 0.3);
+            background: rgba(255, 255, 255, 0.05);
         }
+
         .job-title {
             font-size: 1.8rem;
             font-weight: 800;
-            color: #f0fdfa;
+            color: #ffffff;
             margin-bottom: 12px;
             line-height: 1.2;
         }
 
         .job-company {
             font-size: 1.2rem;
-            color: #06b6d4;
+            color: #007bff;
             font-weight: 600;
             margin-bottom: 20px;
             text-transform: uppercase;
@@ -294,18 +295,18 @@
         }
 
         .job-meta span {
-            background: rgba(6, 182, 212, 0.1);
-            border: 1px solid rgba(6, 182, 212, 0.2);
+            background: rgba(0, 123, 255, 0.1);
+            border: 1px solid rgba(0, 123, 255, 0.2);
             padding: 8px 16px;
             border-radius: 25px;
             font-size: 0.9rem;
-            color: #5eead4;
+            color: #00d4ff;
             font-weight: 500;
             backdrop-filter: blur(10px);
         }
 
         .job-description {
-            color: #94a3b8;
+            color: #8892b0;
             margin-bottom: 25px;
             line-height: 1.8;
             font-size: 1.05rem;
@@ -319,8 +320,8 @@
         }
 
         .apply-btn {
-            background: linear-gradient(135deg, #059669 0%, #047857 100%);
-            color: #f0fdf4;
+            background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
+            color: white;
             border: none;
             padding: 14px 28px;
             border-radius: 30px;
@@ -334,7 +335,7 @@
 
         .apply-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 12px 30px rgba(5, 150, 105, 0.4);
+            box-shadow: 0 12px 30px rgba(40, 167, 69, 0.4);
         }
 
         .modal {
