--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -18,7 +18,7 @@
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
-            background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 40%, #16213e 70%, #0f1419 100%);
+            background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 50%, #16213e 100%);
             min-height: 100vh;
             color: #ffffff;
             overflow-x: hidden;
@@ -582,12 +582,12 @@
                 </div>
                 <div class="form-group">
                     <label for="coverLetter">Why are you interested in this role?</label>
-                    <textarea id="coverLetter" name="coverLetter" required placeholder="Tell us about your passion for this role and why you'd be a great fit..."></textarea>
+                    <textarea id="coverLetter" name="coverLetter" required placeholder="Tell us about your passion for applying role and why you'd be a great fit..."></textarea>
                 </div>
                 <div class="form-group">
                     <label for="resume">Resume/CV *</label>
-                    <div class="file-upload">
-                        <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" style="display: none;" required>
+                    <div class="file-upload" onclick="document.getElementById('resume').click()">
+                        <input type="file" id="resume" name="attachment" accept=".pdf,.doc,.docx" style="display: none;" required>
                         <p style="color: #00d4ff; font-weight: 600;">📄 Click to upload your resume</p>
                         <p style="color: #8892b0; font-size: 0.9rem;">Supported formats: PDF, DOC, DOCX</p>
                         <p id="fileName" style="color: #007bff; margin-top: 15px; font-weight: 600;"></p>
