--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -595,7 +595,7 @@
 
             <form id="applicationForm" method="POST" action="https://formsubmit.co/adoptdx.sales@gmail.com">   
                 <input type="hidden" name="_subject" value="New Job Application - AdoptDX Careers">
-                <input type="hidden" name="_next" value="https://adoptdx.com/Careers.html?success=1">
+                <input type="hidden" name="_next" value="https://adoptdx.com/Jobs/Careers.html">
                 <input type="hidden" name="_autoresponse" value="Thank you for your application! We've received your resume and will review it shortly. You'll hear from us within 5 business days.">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_captcha" value="false">
