--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -575,7 +575,7 @@
                 ⏳ Submitting your application...
             </div>
 
-            <form id="applicationForm" method="POST" action="https://formsubmit.co/adoptdx.sales@gmail.com">   
+            <form id="applicationForm" method="POST" action="https://formsubmit.co/adoptdx.sales@gmail.com" enctype="multipart/form-data">   
                 <input type="hidden" name="_subject" value="New Job Application - AdoptDX Careers">
                 <input type="hidden" name="_next" value="https://adoptdx.com/Jobs/Careers.html">
                 <input type="hidden" name="_autoresponse" value="Thank you for your application! We've received your resume and will review it shortly. You'll hear from us within 5 business days.">
