--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -718,6 +720,37 @@
     </style>
 </head>
 <body>
+    <header class="header" id="header">
+        <nav class="nav">
+           <a href="../index.html#home" style="text-decoration: none;"> <div class="logo">AdoptDX</div></a>
+            <div class="nav-right">
+                <ul class="nav-links">
+                    <li><a href="../index.html#home">Home</a></li>
+                    <li><a href="Services.html">Services</a></li>
+                    <li><a href="../index.html#features">Features</a></li>
+                    <li><a href="../index.html#technology">Technology</a></li>
+                    <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
+                </ul>
+                <a href="../index.html#contact" class="cta-button">Request Demo</a>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </nav>
+            <!-- Mobile Menu -->
+        <div class="mobile-menu" id="mobileMenu">
+            <a href="../index.html#home">Home</a>
+            <a href="Services.html">Services</a>
+            <a href="../index.html#features">Features</a>
+            <a href="../index.html#technology">Technology</a>
+            <a href="../index.html#about">About Us</a>
+            <a href="../index.html#contact">Contact</a>
+            <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
+        </div>
+    </header>
     <div class="bg-particles" id="particles"></div>
 
     <div class="container">
