--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -65,19 +65,6 @@
             position: relative;
             padding: 60px 0;
         }
-
-        .header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100px;
-            height: 4px;
-            background: linear-gradient(90deg, #3b82f6, #8b5cf6);
-            border-radius: 2px;
-        }
-
         .header h1 {
             font-size: 3.5rem;
             margin-bottom: 15px;
@@ -726,10 +713,11 @@
             <div class="nav-right">
                 <ul class="nav-links">
                     <li><a href="../index.html#home">Home</a></li>
-                    <li><a href="Services.html">Services</a></li>
+                    <li><a href="../Pages/Services.html">Services</a></li>
                     <li><a href="../index.html#features">Features</a></li>
                     <li><a href="../index.html#technology">Technology</a></li>
                     <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="Careers.html">Careers</a></li>
                     <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
                 <a href="../index.html#contact" class="cta-button">Request Demo</a>
@@ -743,10 +731,11 @@
             <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
             <a href="../index.html#home">Home</a>
-            <a href="Services.html">Services</a>
+            <a href="../Pages/Services.html">Services</a>
             <a href="../index.html#features">Features</a>
             <a href="../index.html#technology">Technology</a>
             <a href="../index.html#about">About Us</a>
+            <a href="Careers.html">Careers</a>
             <a href="../index.html#contact">Contact</a>
             <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
         </div>
