--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -26,6 +26,7 @@
                     <li><a href="../index.html#features">Features</a></li>
                     <li><a href="../index.html#technology">Technology</a></li>
                     <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../Jobs/Careers.html">Careers</a></li>
                     <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
                 <a href="../index.html#contact" class="cta-button">Request Demo</a>
@@ -43,6 +44,7 @@
             <a href="../index.html#features">Features</a>
             <a href="../index.html#technology">Technology</a>
             <a href="../index.html#about">About Us</a>
+            <a href="../Jobs/Careers.html">Careers</a>
             <a href="../index.html#contact">Contact</a>
             <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
         </div>
