--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li><a href="#features">Features</a></li>
                     <li><a href="#technology">Technology</a></li>
                     <li><a href="#about">About Us</a></li>
+                    <li><a href="Jobs/Careers.html">Careers</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <a href="#contact" class="cta-button desktop-cta">Request Demo</a>
@@ -44,6 +45,7 @@
             <a href="#features">Features</a>
             <a href="#technology">Technology</a>
             <a href="#about">About Us</a>
+            <a href="Jobs/Careers.html">Careers</a>
             <a href="#contact">Contact</a>
             <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
         </div>
