--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../Pages/services.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -748,11 +749,6 @@
             <div class="subtitle">AI & Automation Opportunities</div>
             <div class="tagline">Join our mission to transform businesses through cutting-edge AI technology and intelligent automation solutions</div>
         </div>
-
-        <div class="tabs">
-            <button class="tab-btn active" onclick="showTab('jobs')">🔍 Browse Opportunities</button>
-        </div>
-
         <div id="jobs" class="tab-content active">
             <div class="card">
                 <h2 class="section-title">Available Positions</h2>
