added id as title

--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../Pages/services.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -830,7 +832,7 @@
                 <input type="hidden" name="_captcha" value="false">
                 
                 <input type="hidden" id="applyingJobId" name="Position Applied For">
-                <input type="hidden" id="jobTitle" name="Job Title">
+                <input type="hidden" id="jobTitle title" name="Job Title">
                 
                 <div class="form-group">
                     <label for="applicantName">Full Name *</label>
