--- a/Jobs/JobPost.html
+++ b/Jobs/JobPost.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../Pages/services.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -632,6 +634,40 @@
     </style>
 </head>
 <body>
+    <header class="nav-header">
+        <nav class="nav">
+            <a href="../index.html#home" style="text-decoration: none;">
+                <div class="logo">AdoptDX</div>
+            </a>
+            <div class="nav-right">
+                <ul class="nav-links">
+                    <li><a href="../index.html#home">Home</a></li>
+                    <li><a href="../Pages/Services.html">Services</a></li>
+                    <li><a href="../index.html#features">Features</a></li>
+                    <li><a href="../index.html#technology">Technology</a></li>
+                    <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../Jobs/Careers.html">Careers</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
+                </ul>
+                <a href="../index.html#contact" class="cta-button">Request Demo</a>
+                <div class="hamburger" id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </nav>
+        <div class="mobile-menu" id="mobileMenu">
+            <a href="../index.html#home">Home</a>
+            <a href="../Pages/Services.html">Services</a>
+            <a href="../index.html#features">Features</a>
+            <a href="../index.html#technology">Technology</a>
+            <a href="../index.html#about">About Us</a>
+            <a href="../Jobs/Careers.html">Careers</a>
+            <a href="../index.html#contact">Contact</a>
+            <a href="../index.html#contact" class="cta-button" style="margin-top: 20px;">Request Demo</a>
+        </div>
+    </header>
     <div id="adminIndicator" class="admin-indicator">
         GitHub Job Portal Admin
     </div>
