Added Privacy Policy page

--- a/Jobs/JobPost.html
+++ b/Jobs/JobPost.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../Pages/services.css">
     <link rel="apple-touch-icon" sizes="180x180" href="../Video&Images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../Video&Images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../Video&Images/favicon_io/favicon-16x16.png">
@@ -646,6 +645,7 @@
                     <li><a href="../index.html#features">Features</a></li>
                     <li><a href="../index.html#technology">Technology</a></li>
                     <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../PrivacyPolicy.html">Privacy</a></li>
                     <li><a href="../Jobs/Careers.html">Careers</a></li>
                     <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
@@ -663,14 +663,12 @@
             <a href="../index.html#features">Features</a>
             <a href="../index.html#technology">Technology</a>
             <a href="../index.html#about">About Us</a>
+            <a href="../PrivacyPolicy.html">Privacy</a>
             <a href="../Jobs/Careers.html">Careers</a>
             <a href="../index.html#contact">Contact</a>
             <a href="../index.html#contact" class="cta-button" style="margin-top: 20px;">Request Demo</a>
         </div>
     </header>
-    <div id="adminIndicator" class="admin-indicator">
-        GitHub Job Portal Admin
-    </div>
 
     <div class="bg-particles" id="particles"></div>
 
