--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -774,6 +774,7 @@
                     <li><a href="../index.html#features">Features</a></li>
                     <li><a href="../index.html#technology">Technology</a></li>
                     <li><a href="../index.html#about">About Us</a></li>
+                    <li><a href="../PrivacyPolicy.html">Privacy</a></li>
                     <li><a href="Careers.html">Careers</a></li>
                     <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
@@ -791,6 +792,7 @@
             <a href="../index.html#features">Features</a>
             <a href="../index.html#technology">Technology</a>
             <a href="../index.html#about">About Us</a>
+            <a href="../PrivacyPolicy.html">Privacy</a>
             <a href="Careers.html">Careers</a>
             <a href="../index.html#contact">Contact</a>
             <a href="../index.html#contact" class="cta-button" style="margin-top: 20px;">Request Demo</a>
