changed email to adoptdx.sales

--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -481,7 +481,7 @@
                 <p>We apply reasonable technical and organizational measures to protect information against unauthorized access, alteration, or loss. While no system is completely secure, we work to safeguard client and user data with industry best practices.</p>
 
                 <h3>Your Choices</h3>
-                <p><strong>Account Information & Retention:</strong> You may update or request deletion of your information at any time by contacting us at <a href="mailto:sales.adoptdx@gmail.com">sales.adoptdx@gmail.com</a>. We retain personal data only as long as necessary for service provision or legal obligations.</p>
+                <p><strong>Account Information & Retention:</strong> You may update or request deletion of your information at any time by contacting us at <a href="mailto:adoptdx.sales@gmail.com">adoptdx.sales@gmail.com</a>. We retain personal data only as long as necessary for service provision or legal obligations.</p>
                 <p><strong>Opt Out:</strong> End-user opt-out controls are managed by the client organisation (the data controller). AdoptDX does not directly provide opt-out options to end users.</p>
 
                 <h3>Links to Third Party Websites</h3>
@@ -495,7 +495,7 @@
 
                 <h3>Contacting Us</h3>
                 <p>If you have questions about this Privacy Policy, please contact us at:</p>
-                <p>📧 <a href="mailto:sales.adoptdx@gmail.com">sales.adoptdx@gmail.com</a></p>
+                <p>📧 <a href="mailto:adoptdx.sales@gmail.com">adoptdx.sales@gmail.com</a></p>
             </div>
         </div>
     </div>
