--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -362,16 +362,16 @@
            <a href="#home"  style="text-decoration: none;"> <div class="logo">AdoptDX</div></a>
             <div class="nav-right">
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="Pages/Services.html">Services</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#technology">Technology</a></li>
-                    <li><a href="#about">About Us</a></li>
+                    <li><a href="../index.html#home">Home</a></li>
+                    <li><a href="../Pages/Services.html">Services</a></li>
+                    <li><a href="../index.html#features">Features</a></li>
+                    <li><a href="../index.html#technology">Technology</a></li>
+                    <li><a href="../index.html#about">About Us</a></li>
                     <li><a href="PrivacyPolicy.html">Privacy</a></li>
                     <li><a href="Jobs/Careers.html">Careers</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="../index.html#contact">Contact</a></li>
                 </ul>
-                <a href="#contact" class="cta-button desktop-cta">Request Demo</a>
+                <a href="../index.html#contact" class="cta-button desktop-cta">Request Demo</a>
                 <div class="hamburger" id="hamburger">
                     <span></span>
                     <span></span>
@@ -382,15 +382,15 @@
         
         <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
-            <a href="#home">Home</a>
-            <a href="Pages/Services.html">Services</a>
-            <a href="#features">Features</a>
-            <a href="#technology">Technology</a>
-            <a href="#about">About Us</a>
+            <a href="../index.html#home">Home</a>
+            <a href="../Pages/Services.html">Services</a>
+            <a href="../index.html#features">Features</a>
+            <a href="../index.html#technology">Technology</a>
+            <a href="../index.html#about">About Us</a>
             <a href="PrivacyPolicy.html">Privacy</a>
             <a href="Jobs/Careers.html">Careers</a>
-            <a href="#contact">Contact</a>
-            <a href="#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
+            <a href="../index.html#contact">Contact</a>
+            <a href="../index.html#contact" class="cta-button" style="margin-top: 20px; text-align: center;">Request Demo</a>
         </div>
     </header>
 
