--- a/Jobs/Careers.html
+++ b/Jobs/Careers.html
@@ -1222,5 +1222,29 @@
         // Initialize the application when the page loads
         document.addEventListener('DOMContentLoaded', initializeApp);
     </script>
+    <!-- Footer -->
+<footer class="footer" id="contact">
+  <div class="footer-container">
+    <div class="footer-brand">
+      <h2>AdoptDX</h2>
+      <p>Building the future of human representation.</p>
+    </div>
+
+    <div class="footer-links">
+      <a href="../PrivacyPolicy.html">Privacy</a>
+      <a href="../index.html#contact">Contact us</a>
+      <a href="Careers.html">Careers</a>
+    </div>
+
+    <div class="footer-socials">
+      <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 AdoptDX. All rights reserved.</p>
+  </div>
+</footer>
 </body>
+
 </html>
