--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -261,6 +261,28 @@
 
 
     <script src=..\Pages\services.js></script>
+    <footer class="footer" id="contact">
+            <div class="footer-container">
+                <div class="footer-brand">
+                <h2>AdoptDX</h2>
+                <p>Building the future of human representation.</p>
+                </div>
+
+                <div class="footer-links">
+                <a href="../PrivacyPolicy.html">Privacy</a>
+                <a href="../index.html#contact">Contact us</a>
+                <a href="../Jobs/Careers.html">Careers</a>
+                </div>
+
+                <div class="footer-socials">
+                <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2025 AdoptDX. All rights reserved.</p>
+            </div>
+    </footer>
 </body>
 </html>
 
