--- a/index.html
+++ b/index.html
@@ -398,18 +398,29 @@
 
 
     <!-- Footer -->
-    <footer class="footer" id="contact">
-        <div class="footer-content">
-            <div class="footer-links">
-              <!--   <a href="#privacy">Privacy Policy</a>
-                <a href="#terms">Terms of Service</a>
-                <a href="#api">API Documentation</a>
-                <a href="#support">Support</a>
-                <a href="#careers">Careers</a>
-            </div>-->
-            <p>&copy; 2025 AdoptDX. Building the future of human representation.</p>
-        </div>
-    </footer>
+<footer class="footer" id="contact">
+  <div class="footer-container">
+    <div class="footer-brand">
+      <h2>AdoptDX</h2>
+      <p>Building the future of human representation.</p>
+    </div>
+
+    <div class="footer-links">
+      <a href="PrivacyPolicy.html">Privacy</a>
+      <a href="#contact">Contact us</a>
+      <a href="Jobs/Careers.html">Careers</a>
+    </div>
+
+    <div class="footer-socials">
+      <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 AdoptDX. All rights reserved.</p>
+  </div>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
