--- a/index.html
+++ b/index.html
@@ -397,29 +397,48 @@
     </section>
 
 
-    <!-- Footer -->
-<footer class="footer" id="contact">
+<footer class="footer">
   <div class="footer-container">
+    <!-- Brand + Tagline -->
     <div class="footer-brand">
       <h2>AdoptDX</h2>
-      <p>Building the future of human representation.</p>
+      <p>Accelerating AI & Automation Journeys</p>
+    </div>
+
+    <!-- Navigation Sections -->
+    <div class="footer-links">
+      <h4>Solutions</h4>
+      <a href="Pages/Services.html#invoice">Invoice Approval</a>
+      <a href="Pages/Services.html#reconciliation">Sales Reconciliation</a>
+      <a href="Pages/Services.html#rpa">RPA Automation</a>
+      <a href="Pages/Services.html#analytics">Advanced Analytics</a>
     </div>
 
     <div class="footer-links">
-      <a href="PrivacyPolicy.html">Privacy</a>
-      <a href="#contact">Contact us</a>
+      <h4>Company</h4>
+      <a href="#about">About Us</a>
       <a href="Jobs/Careers.html">Careers</a>
+      <a href="#contact">Contact</a>
     </div>
 
+    <div class="footer-links">
+      <h4>Legal</h4>
+      <a href="PrivacyPolicy.html">Privacy Policy</a>
+    </div>
+
+    <!-- Social -->
     <div class="footer-socials">
+      <h4>Follow us</h4>
       <a href="https://www.linkedin.com/company/adoptdx"><i class="fab fa-linkedin"></i></a>
     </div>
   </div>
 
+  <!-- Bottom bar -->
   <div class="footer-bottom">
     <p>&copy; 2025 AdoptDX. All rights reserved.</p>
   </div>
 </footer>
+
 
 
     <script src="script.js"></script>
